<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_2"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        style="@style/wrapcontent"
        android:layout_margin="55dp"
        android:src="@drawable/logo" />

    <TextView
        style="@style/wrapcontent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/marginbottom"
        android:text="@string/string_facebook"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/et_lemail"
        style="@style/et_style"
        android:layout_below="@id/logo"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/string_email"
        android:drawableLeft="@drawable/icon_email"
        />

    <EditText
        android:id="@+id/et_lpassword"
        style="@style/et_style"
        android:layout_below="@id/et_lemail"
        android:hint="@string/string_pass"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/icon_password"/>

    <Button
        android:id="@+id/btn_login"
        style="@style/button"
        android:layout_below="@id/et_lpassword"
        android:background="@color/colorPrimary"
        android:text="@string/string_Login"
        android:textColor="@color/white"
        />
    <TextView
        style="@style/wrapcontent"
        android:text="Forgot password?"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/btn_login"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="@dimen/marginbottom"/>


</RelativeLayout>